# chronolink-backend/app/Http/Controllers/AuthController.php
@@ -2,9 +2,10 @@
 
 namespace App\Http\Controllers;
 
-use Illuminate\Support\Facades\Auth;
-use App\Http\Controllers\Controller;
+use App\Http\Requests\UserRequest;
 use App\Models\User;
+use Illuminate\Http\Request;
+use Illuminate\Support\Facades\Auth;
 use Illuminate\Support\Facades\Hash;
 use Tymon\JWTAuth\Exceptions\JWTException;
 
@@ -16,15 +17,21 @@ class AuthController extends Controller
      *     summary="Get the authenticated user",
      *     operationId="me",
      *     tags={"Auth"},
+     *
      *     @OA\Response(response=200, description="The authenticated user"),
      *     @OA\Response(response=401, description="Unauthenticated"),
      * )
      */
     public function me()
     {
-        return response()->json(Auth::user());
+        $user = Auth::user();
+        if (! $user) {
+            return response()->json(['error' => 'Unauthenticated'], 401);
+        }
+        $user->timelines;
+
+        return response()->json($user, 200);
     }
-    
 
     /**
      * @OA\Post(
@@ -32,33 +39,35 @@ class AuthController extends Controller
      *     summary="Register a new user",
      *     operationId="register",
      *     tags={"Auth"},
+     *
      *     @OA\RequestBody(
      *         required=true,
+     *
      *         @OA\JsonContent(
-     *             required={"name","email","password"},
-     *             @OA\Property(property="name", type="string", example="John Doe"),
-     *             @OA\Property(property="email", type="string", format="email", example="john_doe@test.com"),
+     *             required={"name","email","password","password_confirmation"},
+     *
+     *            @OA\Property(property="name", type="string", example="John Doe"),
+     *            @OA\Property(property="email", type="string", format="email", example="john_doe@test.com"),
      *            @OA\Property(property="password", type="string", format="password", example="password"),
+     *            @OA\Property(property="password_confirmation", type="string", format="password", example="password"),
      *        ),
      *   ),
+     *
      *  @OA\Response(response=200, description="User registered successfully"),
      *  @OA\Response(response=400, description="Bad request"),
      * )
      */
-    public function register()
+    public function register(UserRequest $request)
     {
-        $credentials = request(['name', 'email', 'password']);
-        if (User::where('email', $credentials['email'])->exists()) {
-            return response()->json(['error' => 'Email already exists'], 400);
-        }
+        $credentials = $request->validated();
 
-        $user = new User();
+        $user = new User;
         $user->name = $credentials['name'];
         $user->email = $credentials['email'];
         $user->password = Hash::make($credentials['password']);
         $user->save();
 
-        return $this->login();
+        return $this->login($request);
     }
 
     /**
@@ -67,21 +76,25 @@ class AuthController extends Controller
      *     summary="Login a user",
      *     operationId="login",
      *     tags={"Auth"},
+     *
      *     @OA\RequestBody(
      *         required=true,
+     *
      *         @OA\JsonContent(
      *             required={"email","password"},
+     *
      *             @OA\Property(property="email", type="string", format="email", example="john_doe@test.com"),
      *            @OA\Property(property="password", type="string", format="password", example="password"),
      *       ),
      * ),
+     *
      * @OA\Response(response=200, description="User logged in successfully"),
      * @OA\Response(response=401, description="Unauthorized"),
      * )
      */
-    public function login()
+    public function login(Request $request)
     {
-        $credentials = request(['email', 'password']);
+        $credentials = $request->only('email', 'password');
 
         if (! $token = Auth::attempt($credentials)) {
             return response()->json(['error' => 'Unauthorized'], 401);
@@ -96,13 +109,19 @@ class AuthController extends Controller
      *     summary="Logout the authenticated user",
      *     operationId="logout",
      *     tags={"Auth"},
+     *
      *     @OA\Response(response=200, description="User logged out successfully"),
      *     @OA\Response(response=401, description="Unauthorized"),
      * )
      */
     public function logout()
     {
-        Auth::logout();
+        try {
+            Auth::logout();
+        } catch (JWTException $e) {
+            return response()->json(['error' => 'Unauthorized'], 401);
+        }
+
         return response()->json(['message' => 'Successfully logged out']);
     }
 
@@ -112,6 +131,7 @@ class AuthController extends Controller
      *     summary="Refresh the token",
      *     operationId="refresh",
      *     tags={"Auth"},
+     *
      *     @OA\Response(response=200, description="Token refreshed successfully"),
      *     @OA\Response(response=401, description="Unauthorized"),
      * )
@@ -130,7 +150,7 @@ class AuthController extends Controller
         return response()->json([
             'access_token' => $token,
             'token_type' => 'bearer',
-            'expires_in' => Auth::factory()->getTTL() * 60
+            'expires_in' => Auth::factory()->getTTL() * 60,
         ]);
     }
 }
